migrate the frontend from `create-react-app` to `Next.js`

--- a/frontend/styles/SignInForm.module.css
+++ b/frontend/styles/SignInForm.module.css
@@ -1,6 +1,7 @@
 .form-signin {
   max-width: 330px;
   padding: 15px;
+  margin: 25px auto;
 }
 
 .form-signin .form-floating:focus-within {
@@ -8,7 +9,7 @@
 }
 
 .form-signin input[type="email"] {
-  margin-bottom: -1px;
+  margin-bottom: 1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
