--- a/frontend/styles/UserInfoTable.module.css
+++ b/frontend/styles/UserInfoTable.module.css
@@ -1,12 +1,29 @@
-.basic-info-wrapper {
+.user-info-wrapper {
+  background-color: #F2F2F2;
+  border-radius: 5px;
+}
+
+.greetings {
   display: flex;
   align-items: center;
 
   font-size: 20px;
-  background-color: #F2F2F2;
 
   padding-left: 25px;
   padding-top: 25px;
   padding-bottom: 25px;
-  border-radius: 5px;
+}
+
+.basic-info-wrapper {
+  padding-left: 25px;
+}
+
+.basic-info {
+  display: relative;
+
+  padding-left: 25px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  font-size: 18px;
+  line-height: 30px;
 }
